Fix error about Path.of; Create some methods to read/write different kind of files in FileSystem.